# deliveries_manager

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
core/: admin.py  models.py
core/migrations/: 0001_initial.py
delivery/: admin.py  models.py
delivery/migrations/: 0001_initial.py  0002_alter_delivery_delivery_date_and_more.py  0003_alter_delivery_options_alter_material_options_and_more.py
delivery_manager/: asgi.py  settings.py  urls.py  wsgi.py
